Ensure root Dockerfile present with correct content/casing for Render

--- a/ai-notes-app/Dockerfile
+++ b/ai-notes-app/Dockerfile
@@ -1,14 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
-
-# copy backend folder into the image
 COPY backend/ ./backend/
-
 WORKDIR /app/backend
-
-# install production deps
 RUN npm ci --production
-
 EXPOSE 10000
-
-CMD ["node","server.js"]
+CMD [\"node\",\"server.js\"]
