--- a/ai-notes-app/Dockerfile
+++ b/ai-notes-app/Dockerfile
@@ -2,6 +2,6 @@ FROM node:18-alpine
 WORKDIR /app
 COPY backend/ ./backend/
 WORKDIR /app/backend
-RUN npm ci --production
+RUN npm install --production
 EXPOSE 10000
 CMD [\"node\",\"server.js\"]
