--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "ai-notes-backend",
+  "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.9.0",
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "axios": "^1.4.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "pg": "^8.11.5",
+    "dotenv": "^16.4.5"
   }
 }
