--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,34 @@
 {
   "name": "ai-notes-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+
+  "engines": {
+    "node": "24.x"
+  },
+
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+
+    "react-icons": "^5.2.1"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "rules": {
-      "no-unused-vars": "off"
-    }
+    ]
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -33,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
