--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "pg": "^8.11.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^6.15.0",
+    "pg": "^8.11.5"
   }
 }
