--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-# 1️⃣ Use Node official image
+# 1️⃣ Use official Node image
 FROM node:18-alpine
 
 # 2️⃣ Set working directory
@@ -10,11 +10,11 @@ COPY package*.json ./
 # 4️⃣ Install dependencies
 RUN npm install
 
-# 5️⃣ Copy all backend source code
+# 5️⃣ Copy backend source code
 COPY . .
 
 # 6️⃣ Expose backend port
 EXPOSE 10000
 
-# 7️⃣ Start backend server
+# 7️⃣ Start backend
 CMD ["npm", "start"]
