--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
+  "name": "ai-notes-backend",
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -10,7 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^6.15.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "openai": "^4.28.0"
   }
 }
